fixed safari overflow

--- a/public/assets/stylesheets/base/_elements.scss
+++ b/public/assets/stylesheets/base/_elements.scss
@@ -23,6 +23,7 @@ body {
   transition: opacity .5s ease-in;
   animation: fadeIn 1s ease-in-out forwards;
   opacity: 0;
+  overflow-x: hidden;
 }
 
 @keyframes fadeIn{
