--- a/public/assets/stylesheets/modules/_hero.scss
+++ b/public/assets/stylesheets/modules/_hero.scss
@@ -9,6 +9,7 @@
   position: relative;
   background-repeat: no-repeat;
   background-position: center top;
+  overflow-x: hidden;
   // background-size: auto 395px;
   // padding-top: 425px;
 
